# kwin

./: .arclint  .clang-format  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  COMPLIANCE  COMPOSITE_HOWTO  COMPOSITE_TODO  CONFIGURING  CONTRIBUTING.md  ExtraDesktop.sh  HACKING  HACKING.md  HOWTO_MAKE_SYSTEM_NOT_SUCK.README  KWinConfig.cmake.in  KWinDBusInterfaceConfig.cmake.in  KWinInterface.h  LICENSE  Mainpage.dox  Makefile.am  Messages.sh  NEWCOLORSCHEME.README  NOTES_4_0  README  README.KRASH  README.md  TESTING.md  abstract_backend.cpp  abstract_backend.h  abstract_client.cpp  abstract_client.h  abstract_egl_backend.cpp  abstract_egl_backend.h  abstract_opengl_context_attribute_builder.cpp  abstract_opengl_context_attribute_builder.h  (+352 more)
autotests/: CMakeLists.txt  abstract_client.h  client.h  fakeeffectplugin.cpp  fakeeffectplugin.json  fakeeffectplugin_version.cpp  fakeeffectplugin_version.json  mock_abstract_client.cpp  mock_abstract_client.h  mock_client.cpp  mock_client.h  mock_effectshandler.cpp  mock_effectshandler.h  mock_screens.cpp  mock_screens.h  mock_workspace.cpp  mock_workspace.h  mock_x11client.cpp  mock_x11client.h  onscreennotificationtest.cpp  onscreennotificationtest.h  opengl_context_attribute_builder_test.cpp  output_transform_test.cpp  serial_test.cpp  test_builtin_effectloader.cpp  test_client_machine.cpp  test_colorspaces.cpp  test_ftrace.cpp  test_gbm_surface.cpp  test_gestures.cpp  test_plugin_effectloader.cpp  test_rect.cpp  test_rectf.cpp  test_region.cpp  test_regionf.cpp  test_screen_edges.cpp  test_screen_paint_data.cpp  test_screens.cpp  test_scripted_effectloader.cpp  test_utils.cpp  (+13 more)
clients/: CMakeLists.txt  Makefile.am  Messages.sh  PORTING  REQUIREMENTS_FOR_CVS
data/: CMakeLists.txt  Makefile.am  fsp_workarounds_1  fsp_workarounds_1.kwinrules  kwin.portal  kwin.upd  kwin3_plugin.pl  kwin3_plugin.upd  kwin_blacklist.sh  kwin_blacklist.upd  kwin_focus1.sh  kwin_focus1.upd  kwin_focus2.sh  kwin_focus2.upd  kwin_fsp_workarounds_1.upd  kwin_on_off.upd  kwin_remove_delay_focus.sh  kwin_remove_delay_focus.upd  kwin_remove_effects.upd  kwin_translate_activity_rule.sh  kwin_translate_activity_rule.upd  kwin_translate_confrequest_rule.sh  kwin_translate_confrequest_rule.upd  kwin_update_410.upd  kwin_update_411.upd  kwin_update_49.upd  kwin_update_tabbox_qml_settings.upd  kwin_update_tabbox_settings.upd  kwin_window_shortcuts.sh  kwin_window_shortcuts.upd  kwinsticky.upd  kwinupdatewindowsettings.upd  on-off_to_true-false.sh  org_kde_kwin.categories  pluginlibFix.pl  stripTitle.js  update_default_rules.cpp  update_kwin_410.cpp  update_kwin_411.cpp  update_kwin_49.cpp  (+5 more)
default/: Button.cpp  CloseButton.cpp  DBWidget.cpp  DBWidget.h  Defines.h  Makefile.am  Manager.cpp  Manager.h  MaximiseButton.h  QuestionButton.cpp  QuestionButton.h  ResizeBar.cpp  ResizeMid.cpp  ResizeSide.cpp  Static.cpp  Static.h  StickyButton.h  TitleBar.cpp  TitleBar.h  TitleText.cpp  TitleText.h  kde.desktop  kdedefault.cpp  kdedefault.h
effects/: CMakeLists.txt  Messages.sh  blur.cpp  blur.desktop  blur.h  boxswitch.cpp  boxswitch.desktop  boxswitch.h  boxswitch_config.cpp  boxswitch_config.desktop  boxswitch_config.ui  configs_builtins.cpp  coverswitch.cpp  coverswitch.desktop  coverswitch.h  coverswitch_config.cpp  coverswitch_config.desktop  coverswitch_config.h  coverswitch_config.ui  cube.cpp  cube.desktop  cube.h  cube_config.cpp  cube_config.desktop  cube_config.h  cube_config.ui  cylinder.cpp  cylinder.desktop  cylinder.h  cylinder_config.cpp  cylinder_config.desktop  cylinder_config.h  cylinder_config.ui  demo_liquid.cpp  demo_liquid.desktop  demo_liquid.h  demo_shakymove.cpp  demo_shakymove.desktop  demo_shakymove.h  demo_shiftworkspaceup.cpp  (+230 more)
kcmkwin/: CMakeLists.txt  Makefile.am
kconf_update/: CMakeLists.txt  kwin-5.16-auto-bordersize.sh  kwin-5.18-move-animspeed.py  kwin-5.21-desktop-grid-click-behavior.py  kwin-5.21-no-swap-encourage.py  kwin-5.23-disable-translucency-effect.sh  kwin-5.23-remove-cover-switch.py  kwin-5.23-remove-cubeslide.py  kwin-5.23-remove-flip-switch.py  kwin-5.23-remove-xrender-backend.py  kwin-5.25-effect-pluginid-config-group.py  kwin-5.27-replace-cascaded-zerocornered.sh  kwin-6.0-delete-desktop-switching-shortcuts.cpp  kwin-6.0-overview-activities-shortcuts.py  kwin-6.0-remove-breeze-tabbox-default.cpp  kwin-6.0-reset-active-mouse-screen.cpp  kwin-6.1-remove-gridview-expose-shortcuts.cpp  kwin-6.4-showpaint-changes.cpp  kwin-6.5-showpaint-changes.cpp  kwin.upd  kwinrules-5.19-placement.pl  kwinrules-5.23-virtual-desktop-ids.py  kwinrules.upd
killer/: CMakeLists.txt  Makefile.am  killer.cpp
kompmgr/: CMakeLists.txt  Makefile.am  configure.in.in  kompmgr.c
lib/: CMakeLists.txt  Mainpage.dox  Makefile.am  Messages.sh  kcommondecoration.cpp  kcommondecoration.h  kcommondecoration_p.cpp  kcommondecoration_p.h  kdecoration.cpp  kdecoration.h  kdecoration_p.cpp  kdecoration_p.h  kdecoration_plugins_p.cpp  kdecoration_plugins_p.h  kdecorationbridge.h  kdecorationfactory.cpp  kdecorationfactory.h  kwinconfig.h.cmake  kwineffects.cpp  kwineffects.h  kwinglobals.cpp  kwinglobals.h  kwinglplatform.cpp  kwinglplatform.h  kwinglutils.cpp  kwinglutils.h  kwinglutils_funcs.cpp  kwinglutils_funcs.h  kwinshadereffect.cpp  kwinshadereffect.h  kwinxrenderutils.cpp  kwinxrenderutils.h
libkdecorations/: CMakeLists.txt  KDecorationsConfig.cmake.in  Mainpage.dox  Messages.sh  kcommondecoration.cpp  kcommondecoration.h  kcommondecoration_p.cpp  kcommondecoration_p.h  kdecoration.cpp  kdecoration.h  kdecoration_p.cpp  kdecoration_p.h  kdecoration_plugins_p.cpp  kdecoration_plugins_p.h  kdecorationbridge.h  kdecorationfactory.cpp  kdecorationfactory.h
libkwineffects/: CMakeLists.txt  KWinEffectsConfig.cmake.in  anidata.cpp  anidata_p.h  kwinanimationeffect.cpp  kwinanimationeffect.h  kwinconfig.h.cmake  kwineffectquickview.cpp  kwineffectquickview.h  kwineffects.cpp  kwineffects.h  kwineglimagetexture.cpp  kwineglimagetexture.h  kwinglcolorcorrection.cpp  kwinglobals.cpp  (+20 more)
(+8179 files in other folders)
